--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^4.9.0",
     "@typescript-eslint/parser": "^4.9.0",
+    "bcryptjs": "^2.4.3",
     "date-fns": "^2.16.1",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "2.22.1",
@@ -22,6 +23,7 @@
     "uuidv4": "^6.2.5"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.9",
     "eslint": "6.8.0",
     "eslint-config-prettier": "^6.15.0",
