--- a/package.json
+++ b/package.json
@@ -1,42 +1,45 @@
 {
-  "name": "backend",
-  "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
-  "scripts": {
-    "build": "tsc",
-    "dev:server": "ts-node-dev --inspect --transpile-only --ignore-watch node_moules src/server.ts",
-    "start": "ts-node src/index.ts",
-    "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
-  },
-  "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.9.0",
-    "@typescript-eslint/parser": "^4.9.0",
-    "bcryptjs": "^2.4.3",
-    "cors": "^2.8.5",
-    "date-fns": "^2.16.1",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-import": "2.22.1",
-    "express": "^4.17.1",
-    "express-async-errors": "^3.1.1",
-    "jsonwebtoken": "^8.5.1",
-    "multer": "^1.4.2",
-    "pg": "^8.5.1",
-    "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.2.29",
-    "uuidv4": "^6.2.5"
-  },
-  "devDependencies": {
-    "@types/bcryptjs": "^2.4.2",
-    "@types/express": "^4.17.9",
-    "@types/jsonwebtoken": "^8.5.0",
-    "@types/multer": "^1.4.5",
-    "eslint": "6.8.0",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-import-resolver-typescript": "^2.3.0",
-    "eslint-plugin-prettier": "^3.2.0",
-    "prettier": "^2.2.1",
-    "ts-node-dev": "^1.0.0",
-    "typescript": "^4.1.2"
-  }
+    "name": "backend",
+    "version": "1.0.0",
+    "main": "index.js",
+    "license": "MIT",
+    "scripts": {
+        "build": "tsc",
+        "dev:server": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_moules src/shared/infra/http/server.ts",
+        "start": "ts-node  -r tsconfig-paths/register src/shared/infra/http/server.ts",
+        "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js"
+    },
+    "dependencies": {
+        "@typescript-eslint/eslint-plugin": "^4.15.0",
+        "@typescript-eslint/parser": "^4.9.0",
+        "bcryptjs": "^2.4.3",
+        "cors": "^2.8.5",
+        "date-fns": "^2.16.1",
+        "eslint-config-airbnb-base": "^14.2.1",
+        "eslint-plugin-import": "2.22.1",
+        "express": "^4.17.1",
+        "express-async-errors": "^3.1.1",
+        "jsonwebtoken": "^8.5.1",
+        "multer": "^1.4.2",
+        "pg": "^8.5.1",
+        "reflect-metadata": "^0.1.13",
+        "tsyringe": "^4.4.0",
+        "typeorm": "^0.2.29",
+        "uuidv4": "^6.2.5"
+    },
+    "devDependencies": {
+        "@types/bcryptjs": "^2.4.2",
+        "@types/cors": "^2.8.9",
+        "@types/express": "^4.17.9",
+        "@types/jsonwebtoken": "^8.5.0",
+        "@types/multer": "^1.4.5",
+        "eslint": "6.8.0",
+        "eslint-config-prettier": "^6.15.0",
+        "eslint-import-resolver-typescript": "^2.3.0",
+        "eslint-plugin-prettier": "^3.2.0",
+        "prettier": "^2.2.1",
+        "ts-node-dev": "^1.0.0",
+        "tsconfig-paths": "^3.9.0",
+        "typescript": "^4.1.2"
+    }
 }
