--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/express": "^4.17.9",
     "@types/jest": "^26.0.20",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/mongodb": "^3.6.8",
     "@types/multer": "^1.4.5",
     "@types/nodemailer": "^6.4.0",
     "eslint": "6.8.0",
