--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "test": "jest"
   },
   "dependencies": {
+    "@types/hapi__joi": "^17.1.6",
     "@typescript-eslint/eslint-plugin": "^4.15.0",
     "@typescript-eslint/parser": "^4.9.0",
     "bcryptjs": "^2.4.3",
+    "celebrate": "^13.0.4",
     "cors": "^2.8.5",
     "date-fns": "^2.16.1",
     "eslint-config-airbnb-base": "^14.2.1",
