--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "handlebars": "^4.7.7",
+    "ioredis": "^4.22.0",
     "jsonwebtoken": "^8.5.1",
     "mime": "^2.5.2",
     "mongodb": "^3.6.4",
@@ -42,6 +43,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.9",
     "@types/express": "^4.17.9",
+    "@types/ioredis": "^4.22.0",
     "@types/jest": "^26.0.20",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mongodb": "^3.6.8",
