--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@types/hapi__joi": "^17.1.6",
+    "@types/redis": "^2.8.28",
     "@typescript-eslint/eslint-plugin": "^4.15.0",
     "@typescript-eslint/parser": "^4.9.0",
     "aws-sdk": "^2.851.0",
@@ -33,6 +34,8 @@
     "multer": "^1.4.2",
     "nodemailer": "^6.4.18",
     "pg": "^8.5.1",
+    "rate-limiter-flexible": "^2.2.1",
+    "redis": "^3.0.2",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.4.0",
     "typeorm": "^0.2.29",
